# EmbeddingIntegralGenerator

./: README.md
examples/GAMESS/C/C/: C.input  basis_set_TZ
examples/GAMESS/C/C/interface_gamess/: gamess.inp  gamess.out  reference_energies_molcas
examples/GAMESS/C/C/reference_output/: C.out  emb_ints.gamess
examples/GAMESS/Formaldehyde/interface_gamess/: emb.in  gamess.inp  gamess.out  reference_energies_molcas
examples/GAMESS/Formaldehyde/reference_output/: Formaldehyde.input  Formaldehyde.out  emb_ints.gamess
examples/Molcas/C/: C.xyz
examples/Molcas/C/interface_molcas/: emb.in  molcas.input  molcas.out  reference_energies_molcas
examples/Molcas/C/reference_output/: C.input  C.out  emb_ints.molcas
examples/Molcas/Formaldehyde/: Formaldehyde.input  basis_set_TZ
examples/Molcas/Formaldehyde/interface_molcas/: emb.in  molcas.input  molcas.out  reference_energies_molcas
examples/Molcas/Formaldehyde/reference_output/: Formaldehyde.out
examples/Molpro/C/: C.input
examples/Molpro/C/interface_molpro/: C.com  C.out  C.xml  emb_ints.molpro  reference_energies_molcas
examples/Molpro/C/reference_output/: C.out
examples/Molpro/Formaldehyde/: Formaldehyde.input
examples/Molpro/Formaldehyde/interface_molpro/: Formaldehyde.com  Formaldehyde.out  Formaldehyde.xml  emb_ints.molpro  reference_energies_molcas
examples/Molpro/Formaldehyde/reference_output/: Formaldehyde.out
examples/QCHEM/Formaldehyde/: Formaldehyde.input  Formaldehyde.out  Formaldehyde.xyz  emb_ints.qchem
examples/TigerCI/C/: C.input
examples/TigerCI/C/reference_output/: C.input  C.out  README  emb_ints.tigerci
examples/TigerCI/Formaldehyde/reference_output/: Formaldehyde.input  Formaldehyde.out  emb_ints.tigerci
src/: CMakeLists.txt
src/integral_generator/: BasisData.cpp  BasisData.h  CMakeLists.txt  ConvertKeys.cpp  ConvertKeys.h  EmbeddingData.cpp  EmbeddingData.h  InputReader.cpp  InputReader.h  Keyword.cpp  Keyword.h  StringUtils.h  TigerStructs.h  Timer.cpp  Timer.h  main.cpp
